--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -1,5 +1,9 @@
 # Workflow to publish Godot HTML5 games to GitHub Pages
 #
+# This script assumes that the project itself is in a subdirectory "project". This 
+# folder structure frees up the root of the repository to be used for non-project
+# files, such as the README, build folder, or raw assets folder.
+#
 # Make sure your project is configured for Web export
 # to the path `build/web`.
 
@@ -29,12 +33,11 @@ jobs:
         run: |
           mkdir -v -p ~/.local/share/godot/templates
           mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/.local/share/godot/templates/${GODOT_VERSION}.stable
-
       - name: Create staging directory
         run: mkdir -v -p build/web
 
       - name: Build
-        run: godot -v --export "HTML5" build/web/index.html
+        run: godot -v --export "HTML5" ../build/web/index.html project/project.godot
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
